# mcp

./: AGENT.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  LICENSE  MVP_TASKS.md  PROMPT.md  README.md  pyproject.toml
.cursor/rules/: stdlib.mdc
.cursor/rules/python/: python-dependency-management.mdc  python-docstrings.mdc  python-function-length.mdc  python-linting-formatting.mdc  python-test-coverage.mdc  python-type-annotations.mdc
.cursor/rules/stdlib/: codebase-search-first.mdc  composition-over-inheritance.mdc  cursor-rules-location.mdc  git-commits.mdc  no-code-in-specifications.mdc  no-example-code.mdc  no-placeholder-code.mdc  prefer-existing-libraries.mdc  prefer-functional-techniques.mdc  production-ready-implementation.mdc  python-dependency-management.mdc  python-exception-handling.mdc  python-imports.mdc  python-linting-formatting.mdc  python-logging.mdc  python-naming-conventions.mdc  readme-holistic-update.mdc  ruby-dependencies.mdc  ruby-documentation.mdc  ruby-error-handling.mdc  ruby-functional.mdc  ruby-oop.mdc  ruby-performance.mdc  ruby-security.mdc  ruby-structure.mdc  ruby-style.mdc  ruby-testing.mdc  (+8 more)
specs/: answers-log.md  conversation-fallback.md  file-management.md  llm-integration.md  mcp-architecture.md  mcp-client-integration.md  mcp-server-tools.md  memory-management.md  mvp.md  open-questions.md  prompt-engine.md  ralph-core.md  recursive-agents.md  research-verification.md  session-management.md  subagent-system.md  tool-integration.md  ux-design.md  workflow-phases.md
src/mcp/: client.py  fetch_url.py  server.py
src/ralph/: ralph.py
(+6 files in other folders)
