[project]
name = "mcp"
version = "0.1.0"
description = "A collection of MCP servers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.25.0",
]

[project.scripts]
fetch_url = "mcp.fetch_url:main"


[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"