[project]
name = "mcp"
version = "0.1.0"
description = "A collection of MCP servers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.25.0",
    "loguru>=0.7.3",
    "openai>=1.95.1",
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]

[project.scripts]
mcp = "mcp.server:main"
ralph = "ralph.ralph:main"


[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
